--- a/WD-FINALS/style.css
+++ b/WD-FINALS/style.css
@@ -1030,7 +1030,7 @@ ul.description li {
 }
 
 .footer {
-    background-color: #2d3aea;
+    background-color: #6992f2;
     text-align: center;
     font-size: 1.5rem;
     font-weight: 500;
